Connected html and .js, tested through simple innerHTML insertion

--- a/index.html
+++ b/index.html
@@ -9,13 +9,22 @@
 </head>
 <body>
     
-<div class="flex-container">
-    <div class="buttons-all">
-        <button class="choice-button">Rock</button>
-        <button class="choice-button">Paper</button>
-        <button class="choice-button">Scissors</button>
+    <div class="flex-container">
+        <div class="choices">
+            <p id="text"></p>
+        </div>
     </div>
-</div>
+
+    <div class="flex-container">
+        <div class="buttons-all">
+            <button class="choice-button" id="rock">Rock</button>
+            <button class="choice-button" id="paper">Paper</button>
+            <button class="choice-button" id="scissors">Scissors</button>
+        </div>
+    </div>
 
 </body>
+
+<script src="workspace.js"></script>
+
 </html>
