--- a/index.html
+++ b/index.html
@@ -8,10 +8,16 @@
     <title>Rock Paper Scissors Game</title>
 </head>
 <body>
+
+    <div class="flex-container">
+        <div class="score-box">
+            <p id="scoreboard">User: 0 | Computer: 0</p>
+        </div>
+    </div>
     
     <div class="flex-container">
         <div class="game-space">
-            <p id="game-text"></p>
+            <p id="game-text">Game to 5. Click your choice to begin.</p>
         </div>
     </div>
 
