Added ASCII art and improved UI.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 
+<div class="game">
     <div class="flex-container">
         <div class="score-box">
             <p id="scoreboard">User: 0 | Computer: 0</p>
@@ -27,12 +28,25 @@
     </div>
 
     <div class="flex-container">
+        <div class="col" id="c1"></div>
+        <div class="col" id="c2"></div>
+        <div class="col" id="c3"></div>
+    </div>
+
+    <div class="flex-container">
+        <div class="game-space">
+            <p id="result"></p>
+        </div>
+    </div>
+
+    <div class="flex-container">
         <div class="buttons-all">
             <button class="choice-button" id="rock">Rock</button>
             <button class="choice-button" id="paper">Paper</button>
             <button class="choice-button" id="scissors">Scissors</button>
         </div>
     </div>
+</div>
 
 </body>
 
